register other users

--- a/src/app/entry/entryEvent/entryEvent.html
+++ b/src/app/entry/entryEvent/entryEvent.html
@@ -222,7 +222,7 @@
                     <div class="form-group">
                         <label for="eventMember">Is a Hymn Society member involved?</label>
                             <md-radio-group [(ngModel)]="submission.data.hymn_soc_member" name="isMember" required>
-                                <md-radio-button class="block-input" name="hymn_soc_member" value="Yes" required>Yes</md-radio-button>
+                                <md-radio-button class="block-input" name="hymn_soc_member" value="Yes">Yes</md-radio-button>
                                 <md-radio-button class="block-input" name="hymn_soc_member" value="No">No</md-radio-button>
                             </md-radio-group>
                     </div> 
