about to deploy

--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -250,7 +250,7 @@
                                 ng-true-value="true" 
                                 ng-false-value="false"
                                 name="congregationInstrumentEight"
-                                [(ngModel)]="Obligato_instruments_flute_clarinet_trumpet_etc">
+                                [(ngModel)]="submission.data.instruments.Obligato_instruments_flute_clarinet_trumpet_etc">
                                 Obligato Instruments (flute, clarinet, trumpet, etc...)</md-checkbox>
                     
                             <md-checkbox class="block-input">                        
