--- a/src/app/entry/entryOrgs/entryOrgs.html
+++ b/src/app/entry/entryOrgs/entryOrgs.html
@@ -340,7 +340,7 @@
                                 ng-true-value="true" 
                                 ng-false-value="false"
                                 name="orgInstrumentEight"
-                                [(ngModel)]="Obligato_instruments_flute_clarinet_trumpet_etc">
+                                [(ngModel)]="submission.data.instruments.Obligato_instruments_flute_clarinet_trumpet_etc">
                                 Obligato Instruments (flute, clarinet, trumpet, etc...)</md-checkbox>
                     
                             <md-checkbox class="block-input">                        
