--- a/src/app/shared/entryNavbar/entryNavbar.html
+++ b/src/app/shared/entryNavbar/entryNavbar.html
@@ -7,9 +7,11 @@
       <li><a md-button (click)="openDialog('/entry/orgs')">Organization</a></li>
       <li><a md-button (click)="openDialog('/entry/events')">Event</a></li>
     </ul>
+    <br>
     <ul class="nav-sidebar" *ngIf="isAdmin">
       <li>Admin Options</li>
       <li><a md-button (click)="openDialog('/entry/register')">Register Users</a></li>
+       <li><a md-button (click)="openDialog('/entry/review')">Review Entries</a></li>
     </ul>
 </div>
 <div>
