--- a/src/app/review/reviewResources/reviewResources.html
+++ b/src/app/review/reviewResources/reviewResources.html
@@ -19,7 +19,7 @@
                                 <div>
                                     <h4 class="media-heading">
 
-                                        {{ resource}}
+                                        {{ resources.user }}
 
                                         <!--<a class="glyphicon glyphicon-edit" 
                                             [routerLink]="resource.data.id">
