stable on form review

--- a/src/app/review/reviewResources/reviewResources.html
+++ b/src/app/review/reviewResources/reviewResources.html
@@ -17,19 +17,13 @@
                         <div class="media" *ngFor="let resources of resources; let index = index;">
                             <div class="media-body">
                                 <div>
-                                    <h4 class="media-heading">
-
-                                        {{ resources.user }}
-
-                                        <!--<a class="glyphicon glyphicon-edit" 
-                                            [routerLink]="resource.data.id">
-                                        </a>
-
-                                        <a class="glyphicon glyphicon-trash" 
-                                            (click)="delete(resource.data.id, index)">
-                                        </a>-->
-
-                                    </h4>
+                                    <h6 class="media-heading">
+                                        <ul>
+                                            <li>
+                                                <a [routerLink]="resources.id" style="color: black;"> <b>Title:</b> {{ resources.title }} <b>User:</b> {{ resources.user }} </a>
+                                            </li>
+                                       </ul>
+                                    </h6>
                                 </div>
 
                             </div>
