--- a/src/app/review/reviewPersons/reviewPersons.html
+++ b/src/app/review/reviewPersons/reviewPersons.html
@@ -20,7 +20,7 @@
                                     <h6 class="media-heading">
                                         <ul>
                                             <li>
-                                                <a [routerLink]="resources.id" md-button>{{ resources.first_name }} {{ resources.last_name}}, submitted by {{ resources.user }} </a>
+                                                <a [routerLink]="resources.id" md-button>{{ resources.first_name }}, submitted by {{ resources.user }} </a>
                                             </li>
                                        </ul>
                                     </h6>
