messy code gettin pushed

--- a/src/app/edit/editResources/editResources.html
+++ b/src/app/edit/editResources/editResources.html
@@ -77,7 +77,7 @@
                 <br>
                 <br>
                 <br>
-                <button md-raised-button color="primary" type="submit" (click)="approve()">
+                <button md-raised-button color="primary" type="submit" (click)="approve(resource?.id)">
                     Approve
                 </button>
                 <button md-button (click)="delete()">
