--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -7,77 +7,88 @@
       <md-card>
         <md-card-content>
             <md-card-subtitle class="entry-card-header">
-                Resources
+                Events
             </md-card-subtitle>
-            <md-card-title><h4 class="card-title">Review this resource</h4></md-card-title>
+            <md-card-title><h4 class="card-title">Review this event</h4></md-card-title>
             <br>
             <div class="form-group">
-                <b style="font-weight: 700;">Title:</b> {{ resource?.data.title }}
+                <b style="font-weight: 700;">Event Title:</b> {{ event?.data.title }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Type:</b> {{ resource?.data.type}}
+                <b style="font-weight: 700;">Event Frequency:</b> {{ event?.data.frequency}}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Type:</b> {{ resource?.data.type }}
+                <b style="font-weight: 700;">Event website:</b> {{ event?.data.url }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">URL:</b> {{ resource?.data.url }}
+                <b style="font-weight: 700;">Parent Organization or Source:</b> {{ event?.data.parent }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Author/Creator:</b> {{ resource?.data.title }}
+                <b style="font-weight: 700;">Topic/Emphasis/Theme:</b> {{ event?.data.theme }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Parent Organization or Source:</b> {{ resource?.data.parent }}
+                <b style="font-weight: 700;">Event Description:</b>  {{ event?.data.description }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Description:</b>  {{ resource?.data.description }}
+                <b style="font-weight: 700;">Event start date:</b>  {{ event?.data.event_date }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What categories does this resource fit into or relate to?</b> {{ resource?.data.categories }}
+                <b style="font-weight: 700;">Event end date:</b>  {{ event?.data.event_end_date }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Does this resource address any of these specific topics/concerns?</b> {{ resource?.data.topics }}
+                <b style="font-weight: 700;">Registration cost:</b> {{ event?.data.cost }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Country:</b> {{ event?.data.country }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">State/Province:</b> {{ event?.data.state }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">City:</b> {{ event?.data.city }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Is a hymn society member involved?</b>  {{ event?.data.hymn_soc_member }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">What types of ensembles are you comfortable working with?</b> {{ event?.data.ensembles }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Which best describes the shape of your worship?</b> {{ event?.data.shape }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Does this resource address any of these specific topics/concerns?</b> {{ event?.data.topics }}
                 <br>
                 <br>
                 <br> 
-                <b style="font-weight: 700;">What kind of accompaniment does this resource address or lend itself toward?</b> {{ resource?.data.accompaniment }}
+                <b style="font-weight: 700;">What types of ensembles are addressed in this event?</b> {{ event?.data.ensembles }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What languages are represented in this resource?</b> {{ resource?.data.languages }}
+                 <b style="font-weight: 700;">What does your pastor/priest wear when he/she preaches?</b> {{ event?.data.clothing }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What types of ensembles are addressed in this resource?</b> {{ resource?.data.ensembles }}
+                <b style="font-weight: 700;">On average, how many people will attend your event?</b> {{ event?.data.attendance }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What ethnicities does this resource represent?</b> {{ resource?.data.ethnicities }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is a Hymn Society member involved?</b> {{ resource?.data.hymn_soc_member }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is this resource free?</b> {{ resource?.data.is_free }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is this resource practical or scholarly or both?</b> {{ resource?.data.pract_schol }}
-                <br>
-                <br>
-                <br>
-                <br>
-                <button md-raised-button color="primary" type="submit" (click)="approve(resource?.id)">
+                <button md-raised-button color="primary" type="submit" (click)="approve(event?.id)">
                     Approve
                 </button>
                 <button md-button (click)="delete()">
