--- a/src/app/edit/editOrganizations/editOrganizations.html
+++ b/src/app/edit/editOrganizations/editOrganizations.html
@@ -7,77 +7,84 @@
       <md-card>
         <md-card-content>
             <md-card-subtitle class="entry-card-header">
-                Resources
+                Organizations
             </md-card-subtitle>
-            <md-card-title><h4 class="card-title">Review this resource</h4></md-card-title>
+            <md-card-title><h4 class="card-title">Review this organization</h4></md-card-title>
             <br>
             <div class="form-group">
-                <b style="font-weight: 700;">Title:</b> {{ resource?.data.title }}
+                <b style="font-weight: 700;">Name:</b> {{ organization?.data.name }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Type:</b> {{ resource?.data.type}}
+                <b style="font-weight: 700;">Website:</b> {{ organization?.data.url }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Type:</b> {{ resource?.data.type }}
+                <b style="font-weight: 700;">Parent Organization or Source:</b> {{ organization?.data.parent }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">URL:</b> {{ resource?.data.url }}
+                <b style="font-weight: 700;">Denomination/Tradition:</b> {{ organization?.data.denomination }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Author/Creator:</b> {{ resource?.data.title }}
+                <b style="font-weight: 700;">Country:</b> {{ organization?.data.country }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Parent Organization or Source:</b> {{ resource?.data.parent }}
+                <b style="font-weight: 700;">State/Province:</b> {{ organization?.data.state }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Description:</b>  {{ resource?.data.description }}
+                <b style="font-weight: 700;">City:</b> {{ organization?.data.city }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What categories does this resource fit into or relate to?</b> {{ resource?.data.categories }}
+                <b style="font-weight: 700;">What geographic area(s) do you serve?</b> {{ organization?.data.geography }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Does this resource address any of these specific topics/concerns?</b> {{ resource?.data.topics }}
+                <b style="font-weight: 700;">Are any of your resources free?</b> {{ organization?.data.is_org_free }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Are any of your events free?</b> {{ organization?.data.is_event_free }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Do you charge for membership?</b> {{ organization?.data.membership_free }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">What is the mission?</b> {{ organization?.data.mission }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">How does your organization encourage congregational song?</b> {{ organization?.data.process }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Which types of song/hymn(s) has your congregation used or referenced in the past year?</b> {{ organization?.data.categories }}
+                <br>
+                <br>
+                <br>
+                <b style="font-weight: 700;">Which types of instruments does your congregation use during congregational singing?</b> {{ organization?.data.instruments }}
                 <br>
                 <br>
                 <br> 
-                <b style="font-weight: 700;">What kind of accompaniment does this resource address or lend itself toward?</b> {{ resource?.data.accompaniment }}
+                <b style="font-weight: 700;">Which best describes the shape of your worship?</b> {{ organization?.data.shape }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What languages are represented in this resource?</b> {{ resource?.data.languages }}
+                <b style="font-weight: 700;">What does your pastor/priest wear when he/she preaches?</b> {{ organization?.data.clothing }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What types of ensembles are addressed in this resource?</b> {{ resource?.data.ensembles }}
+                <b style="font-weight: 700;">What ethnicities make up at least 20% of your organization?</b> {{ organization?.data.ethnicities }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">What ethnicities does this resource represent?</b> {{ resource?.data.ethnicities }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is a Hymn Society member involved?</b> {{ resource?.data.hymn_soc_member }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is this resource free?</b> {{ resource?.data.is_free }}
-                <br>
-                <br>
-                <br>
-                <b style="font-weight: 700;">Is this resource practical or scholarly or both?</b> {{ resource?.data.pract_schol }}
-                <br>
-                <br>
-                <br>
-                <br>
-                <button md-raised-button color="primary" type="submit" (click)="approve(resource?.id)">
+                <button md-raised-button color="primary" type="submit" (click)="approve(organization?.id)">
                     Approve
                 </button>
                 <button md-button (click)="delete()">
