--- a/src/app/edit/editOrganizations/editOrganizations.html
+++ b/src/app/edit/editOrganizations/editOrganizations.html
@@ -48,7 +48,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Are any of your events free?</b> {{ organization?.data.is_event_free }}
+                <b style="font-weight: 700;">Are any of your events free?</b> {{ organization?.data.events_free }}
                 <br>
                 <br>
                 <br>
