fixes from biran's email

--- a/src/app/edit/editEvents/editEvents.html
+++ b/src/app/edit/editEvents/editEvents.html
@@ -20,7 +20,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Event website:</b> {{ event?.data.url }}
+                <b style="font-weight: 700;">Event website:</b> <a href="{{ event?.data.url }}">{{ event?.data.url }}</a>  
                 <br>
                 <br>
                 <br>
