--- a/src/app/edit/editResources/editResources.html
+++ b/src/app/edit/editResources/editResources.html
@@ -16,19 +16,15 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Type:</b> {{ resource?.data.type}}
-                <br>
-                <br>
-                <br>
                 <b style="font-weight: 700;">Type:</b> {{ resource?.data.type }}
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">URL:</b> {{ resource?.data.url }}
+                <b style="font-weight: 700;">URL:</b> <a href="{{ resource?.data.url }}">{{ resource?.data.url }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Author/Creator:</b> {{ resource?.data.title }}
+                <b style="font-weight: 700;">Author/Creator:</b> {{ resource?.data.author }}
                 <br>
                 <br>
                 <br>
