--- a/src/app/entry/entryCongregation/entryCongregation.html
+++ b/src/app/entry/entryCongregation/entryCongregation.html
@@ -371,7 +371,7 @@
                         ng-false-value="false"
                         name="congregationEthnicitySix"
                         [(ngModel)]="submission.data.ethnicities.Black_African_American">
-                        Black - African/American
+                        Black - African - American
                     </md-checkbox>
                      <md-checkbox class="block-input"
                         ng-true-value="true"
