--- a/src/app/entry/entryPerson/entryPerson.html
+++ b/src/app/entry/entryPerson/entryPerson.html
@@ -179,7 +179,7 @@
                         <!--<label for="personEmphasis">Main Topic/Emphasis</label>-->
                         <md-input-container class="full-width">
                             <input md-input mdInput type="text"
-                            placeholder="Main Topic/Emphasiss"
+                            placeholder="Main Topic/Emphasis"
                             id="personEmphasis" 
                             class="form-control" 
                             [(ngModel)]="submission.data.emphasis"
@@ -299,7 +299,7 @@
                         ng-false-value="false"
                         name="congregationEthnicitySix"
                         [(ngModel)]="submission.data.ethnicities.Black_African_American">
-                        Black - African/American
+                        Black - African - American
                     </md-checkbox>
                      <md-checkbox class="block-input"
                         ng-true-value="true"
