--- a/src/app/edit/editCongregations/editCongregations.html
+++ b/src/app/edit/editCongregations/editCongregations.html
@@ -16,7 +16,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Website:</b> {{ congregation?.data.url }}
+                <b style="font-weight: 700;">Website:</b> <a href="{{ congregation?.data.url }} ">{{ congregation?.data.url }}</a>   
                 <br>
                 <br>
                 <br>
