--- a/src/app/edit/editOrganizations/editOrganizations.html
+++ b/src/app/edit/editOrganizations/editOrganizations.html
@@ -16,7 +16,7 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Website:</b> {{ organization?.data.url }}
+                <b style="font-weight: 700;">Website:</b> <a href="{{ organization?.data.url }}">{{ organization?.data.url }}</a> 
                 <br>
                 <br>
                 <br>
