--- a/src/app/edit/editPerson/editPerson.html
+++ b/src/app/edit/editPerson/editPerson.html
@@ -32,19 +32,19 @@
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Website:</b> {{ person?.data.url }}
+                <b style="font-weight: 700;">Website:</b> <a href="{{ person?.data.url }}">{{ person?.data.url }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Facebook:</b> {{ person?.data.social_facebook }}
+                <b style="font-weight: 700;">Facebook:</b> <a href="{{ person?.data.social_facebook }}">{{ person?.data.social_facebook }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Twitter:</b> {{ person?.data.social_twitter }}
+                <b style="font-weight: 700;">Twitter:</b> <a href="{{ person?.data.social_twitter }}">{{ person?.data.social_twitter }}</a>
                 <br>
                 <br>
                 <br>
-                <b style="font-weight: 700;">Other social media connections:</b> {{ person?.data.social_other }}
+                <b style="font-weight: 700;">Other social media connections:</b> <a href="{{ person?.data.social_other }}">{{ person?.data.social_other }}</a> 
                 <br>
                 <br>
                 <br>
